fix background flickering

--- a/getlambda/assets/style/theme/page-about.less
+++ b/getlambda/assets/style/theme/page-about.less
@@ -3,8 +3,20 @@
 */
 
 .page-about {
-    background: url(/assets/images/bridge_construction.jpg) 50% 0 no-repeat fixed;
-    background-size: cover;
+    .underlay {
+        position: fixed;
+    }
+    .bg-image {
+        background: url(/assets/images/bridge_construction.jpg) 50% 0 no-repeat fixed;
+        background-size: cover;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        top: 0px;
+        left: 0px;
+        z-index: -1;
+        .opacity(50);
+    }
     padding-top: 30px;
     .about-items {
         .item {
